# animotion

./: README.md  demo_30s.py  logo.txt  pyproject.toml
src/animotion/: __init__.py  animator.py  core.py  frames.py  styles.py
